--- a/glorify/index.html
+++ b/glorify/index.html
@@ -240,7 +240,7 @@
       <div class="element">
         <h3><strong>Context</strong></h3>
         <h4>Glorify is a mobile application that offers <span class="textDecor GLORIFY"> a vast library of
-            content</span> designed to support users in theirspiritual journey,
+            content</span> designed to support users in their spiritual journey,
           particularly those who follow the Christian faith. The app provides a
           range of resources such as daily devotionals, scripture readings, prayer guides, and other faith-based content
           that users can access at their convenience. Glorify's content is designed to be <span
@@ -413,8 +413,8 @@
 
       <div class="Grid-cell">
         <div class="element displayLaptop progress">
-          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif"
-            data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
+          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif" data-static="HiFi_GroupPrayerCover.png"
+            src="HiFi_GroupPrayerCover.png" />
         </div>
         <!-- displayLaptop -->
         <div class="element displayTablet progress">
@@ -448,18 +448,18 @@
     <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
       <div class="Grid-cell">
         <div class="element displayLaptop progress">
-          <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
-            data-static="HiFi_FinalPrayer.png" src="HiFi_FinalPrayer.png" />
+          <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayer.png"
+            src="HiFi_FinalPrayer.png" />
         </div>
         <!-- displayLaptop -->
         <div class="element displayTablet progress">
-          <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
-            data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
+          <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png"
+            src="HiFi_FinalPrayerTap.png" />
         </div>
         <!-- displayTablet -->
         <div class="element displayPhone progress">
-          <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
-            data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
+          <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png"
+            src="HiFi_FinalPrayerTap.png" />
         </div>
         <!-- displayPhone -->
         <div class="element">
@@ -469,18 +469,18 @@
 
       <div class="Grid-cell">
         <div class="element displayLaptop progress">
-          <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif"
-            data-static="HiFi_FinalEnhancement.png" src="HiFi_FinalEnhancement.png" />
+          <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancement.png"
+            src="HiFi_FinalEnhancement.png" />
         </div>
         <!-- displayLaptop -->
         <div class="element displayTablet progress">
-          <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif"
-            data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
+          <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancementTap.png"
+            src="HiFi_FinalEnhancementTap.png" />
         </div>
         <!-- displayTablet -->
         <div class="element displayPhone progress">
-          <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
-            data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
+          <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalEnhancementTap.png"
+            src="HiFi_FinalEnhancementTap.png" />
         </div>
         <!-- displayPhone -->
         <div class="element">
@@ -707,8 +707,10 @@
                   </p>
                 </div>
                 <div class="Grid-cell">
-                  <h4 class="help" title="This is a brief exercise, ideally requiring the recruitment of 5 participants."> <strong> 3 participants </strong>
-                </h4>
+                  <h4 class="help"
+                    title="This is a brief exercise, ideally requiring the recruitment of 5 participants."> <strong> 3
+                      participants </strong>
+                  </h4>
                   <ul>
                     <li class="listCircle">Participant 1 age. 38 male </li>
                     <li class="listCircle">Participant 2 age. 46 female </li>
@@ -721,7 +723,8 @@
               <div class="Grid Grid--full wrapper">
                 <div class="Grid-cell">
 
-                  <p class="specialTextNote colorGLORIFYBlue u-textCenter">Research goal &#8680; research questions &#8680; recruit participants
+                  <p class="specialTextNote colorGLORIFYBlue u-textCenter">Research goal &#8680; research questions
+                    &#8680; recruit participants
                   </p>
 
                 </div>
@@ -962,7 +965,8 @@
 
               <h5> <strong> Additional notes</strong> </h5>
               <ul>
-                <li class="listCircle">Finds value in women's ministry events and retreats, fostering a nurturing and empowering environment.
+                <li class="listCircle">Finds value in women's ministry events and retreats, fostering a nurturing and
+                  empowering environment.
                 </li>
                 <li class="listCircle">Seeks worship experiences that provide a sense of community and connection.</li>
               </ul>
@@ -1106,7 +1110,7 @@
             <div class="Grid-cell">
               <div class="element ">
                 <h2 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
-                  <strong class="colorGLORIFYOrange"> Finding 1</strong>
+                  <strong class="colorGLORIFYOrange"> Finding 1 - the motivation</strong>
                 </h2>
                 <h4><strong>The participants expressed a range of preferences when it comes to worship styles and
                     expressions. The primary benefits that Christians derive from attending such worship include the
@@ -1127,7 +1131,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
-                  <strong class="colorGLORIFYOrange"> Finding 2</strong>
+                  <strong class="colorGLORIFYOrange"> Finding 2 - the purpose</strong>
                 </h2>
                 <h4><strong>Participants tend to attend <span class="textDecor GLORIFY">small group events more
                       frequently due to the enriching discussions and the chance to forge connections with fellow
@@ -1147,7 +1151,7 @@
               <div class="element ">
 
                 <h2 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
-                  <strong class="colorGLORIFYOrange"> Finding 3</strong>
+                  <strong class="colorGLORIFYOrange"> Finding 3 - the difference</strong>
                 </h2>
                 <h4><strong>Older participants often gravitate towards contemplative and introspective worship, while
                     younger participants tend to prefer <span class="textDecor GLORIFY">dynamic and interactive worship
@@ -1163,7 +1167,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
-                  <strong class="colorGLORIFYOrange"> Finding 4</strong>
+                  <strong class="colorGLORIFYOrange"> Finding 4 - the challenge</strong>
                 </h2>
                 <h4><strong>Participants in group worship often face challenges, especially when it comes to navigating
                     <span class="textDecor GLORIFY">different interpretations of the worship style or
@@ -1365,6 +1369,19 @@
               </div>
             </div>
           </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <p class="specialTextNote colorGLORIFYBlue u-textCenter">Brainstorming Solutions with a Focus on: Easy
+                  to search for <span class="textDecor GLORIFY">like-minded worship groups</span>. Enhancing <span
+                    class="textDecor GLORIFY">seamless
+                    interactions</span> within the community. Building and nurturing meaningful <span
+                    class="textDecor GLORIFY">connections</span>.</p>
+
+
+              </div>
+            </div>
+          </div>
           <div class="blankHS"></div>
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -1473,14 +1490,36 @@
               <div class="blankHXS"></div>
             </div>
           </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <p class="specialTextNote colorGLORIFYBlue u-textCenter">After the brainstorming session, I worked to
+                  pinpoint the most crucial functionality for the community's initial version.</p>
 
+                <p class="specialTextNote colorGLORIFYBlue u-textCenter">Based on the four categories, the idea of a
+                  local community is not feasible because it's challenging to establish and the current platform isn't
+                  designed as a locally-focused mobile app</p>
+                <p class="specialTextNote colorGLORIFYBlue u-textCenter"> The most rational functionalities to
+                  prioritize are foundational features that underpin the community. This includes enhancing user
+                  profiles, providing ways to connect with other users, and facilitating the sharing of Bible study
+                  notes. While these are essential, they may lack a certain excitement factor.
+                </p>
+                <p class="specialTextNote colorGLORIFYBlue u-textCenter">
+                  Striking a balance between features that bring delight and are deeply cherished, I've decided to
+                  develop functionalities for Bible study group worship and prayer-focused group worship, especially
+                  since the app currently supports a single-player mode.
+                </p>
+              </div>
+            </div>
+          </div>
 
           <div class="element">
             <div class="Grid Grid--full">
               <div class="Grid-cell">
                 <div class="element">
                   <h4> <strong> Group Worship Through the App&#58; </strong> </h4>
-                  <p>Group worship within the app,  <span class="textDecor GLORIFY">group prayer and Bible study</span>, emerges as a top design choice, highlighting user engagement and community growth.</p>
+                  <p>Group worship within the app, <span class="textDecor GLORIFY">group prayer and Bible study</span>,
+                    emerges as a top design choice, highlighting user engagement and community growth.</p>
                 </div>
               </div>
             </div>
@@ -1488,13 +1527,16 @@
               <div class="Grid-cell">
                 <div class="element">
                   <h5> <strong> Deepened Community Interaction&#58; </strong></h5>
-                  <p>While the 'Most Rational' category establishes connections and the 'Most Delightful' enhances discovery, the 'Darling' idea of group worship delves deeper into facilitating spiritual communion among users. It's an experience that can bind the community closer than shared notes or music.</p>
+                  <p>While the 'Most Rational' category establishes connections and the 'Most Delightful' enhances
+                    discovery, the 'Darling' idea of group worship delves deeper into facilitating spiritual communion
+                    among users. It's an experience that can bind the community closer than shared notes or music.</p>
                 </div>
               </div>
               <div class="Grid-cell">
                 <div class="element">
                   <h5> <strong> Unique Offering:&#58; </strong></h5>
-                  <P> While many apps might facilitate sharing of notes, music, or journals, a space designed specifically for group prayer/Bible study is a rarer commodity, giving our platform a distinct edge.
+                  <P> While many apps might facilitate sharing of notes, music, or journals, a space designed
+                    specifically for group prayer/Bible study is a rarer commodity, giving our platform a distinct edge.
                   </P>
                 </div>
               </div>
@@ -1503,13 +1545,17 @@
               <div class="Grid-cell">
                 <div class="element">
                   <h5> <strong> Balanced Approach&#58; </strong></h5>
-                  <p>Being from the 'Darling' category, it strikes a balance between innovation and feasibility. It's a feature that's both daring and realistic, allowing us to explore new territories without straying too far from known grounds.</p>
+                  <p>Being from the 'Darling' category, it strikes a balance between innovation and feasibility. It's a
+                    feature that's both daring and realistic, allowing us to explore new territories without straying
+                    too far from known grounds.</p>
                 </div>
               </div>
               <div class="Grid-cell">
                 <div class="element">
                   <h5> <strong> Future Scalability:&#58; </strong></h5>
-                  <P> Once a robust system for group worship/Bible study is established, it can be further expanded or refined, integrating elements from other categories. For instance, shared worship statistics from the 'Most Rational' category can be integrated to provide insights into group prayer sessions.
+                  <P> Once a robust system for group worship/Bible study is established, it can be further expanded or
+                    refined, integrating elements from other categories. For instance, shared worship statistics from
+                    the 'Most Rational' category can be integrated to provide insights into group prayer sessions.
                   </P>
                 </div>
               </div>
@@ -1520,7 +1566,10 @@
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <p class="specialTextNote colorGLORIFYBlue u-textCenter">While my decision stems from a small sample size, with more time, I'd gather broader feedback and use quantitative surveys for deeper insights. Yet, even with this limited data, the 'group worship through the app' emerges as a leading design choice.
+                <p class="specialTextNote colorGLORIFYBlue u-textCenter">While my decision stems from a small sample
+                  size, with more time, I'd gather broader feedback and use quantitative surveys for deeper insights.
+                  Yet, even with this limited data, the 'group worship through the app' emerges as a leading design
+                  choice.
                 </p>
               </div>
             </div>
@@ -1568,7 +1617,14 @@
             </div>
 
           </div>
-
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <p class="specialTextNote colorGLORIFYBlue u-textCenter">Outline the fundamental steps for the two concepts. One focuses on facilitating a Bible study session, and the other addresses the organization of a group prayer session.
+                </p>
+              </div>
+            </div>
+          </div>
           <div class="blankHS"></div>
 
         </div>
@@ -3987,25 +4043,25 @@
         <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
           <div class="Grid-cell">
             <div class="element displayLaptop progress">
-              <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
-                data-static="HiFi_FinalPrayer.png" src="HiFi_FinalPrayer.png" />
+              <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayer.png"
+                src="HiFi_FinalPrayer.png" />
             </div>
             <!-- displayLaptop -->
             <div class="element displayTablet progress">
-              <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
-                data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
+              <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png"
+                src="HiFi_FinalPrayerTap.png" />
             </div>
             <!-- displayTablet -->
             <div class="element displayPhone progress">
-              <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
-                data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
+              <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png"
+                src="HiFi_FinalPrayerTap.png" />
             </div>
             <!-- displayPhone -->
             <div class="element">
               <h4> Hi-fi prototype </h4>
             </div>
           </div>
-    
+
           <div class="Grid-cell">
             <div class="element displayLaptop progress">
               <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif"
@@ -4018,8 +4074,8 @@
             </div>
             <!-- displayTablet -->
             <div class="element displayPhone progress">
-              <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
-                data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
+              <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalEnhancementTap.png"
+                src="HiFi_FinalEnhancementTap.png" />
             </div>
             <!-- displayPhone -->
             <div class="element">
